# postfix-dockerize

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
etc/: rsyslog.conf
etc/postfix/: main.cf.tmpl  master.cf  master.cf.tmpl
kubernetes/postfix-mail-domain-tld/: daemonset.yml
service/dovecot/: run
service/postfix/: run
service/rsyslog/: run
tests/: conftest.py  docker-compose.test.yml
tests/integration/: test_database.py  test_imap.py  test_smtp.py
tests/test-certs/: cert.pem  dh2048.pem  dh4096.pem  dh512.pem  key.pem
usr/sbin/: runit_bootstrap
